tests/cases/invalid/ternary-pipe-precedence/example.mld
var @raw = "hello"
var @x = @raw ? @raw | @parse.llm : null
